# GoIt_Python_Web

./: .gitignore
HW-11/: main.py  pyproject.toml
HW-11/migration/: env.py
HW-11/migration/versions/: 81404c94c6ef_init.py  a7a393d9169f_init.py
HW-11/src/entity/: models.py
HW-11/src/repository/: contacts.py
HW-11/src/schemas/: contact.py
HW-12/: main.py  pyproject.toml
HW-13/: .env  .env.example  main.py  pyproject.toml
HW-13/migration/: env.py
HW-13/migration/versions/: 4946146a33e3_init.py
HW-13/postgres-data/base/1/: pg_internal.init
HW-13/postgres-data/base/16384/: 1247  1249  1259  16392  16395  16406  16411  16414  16418  2224  2579  2608  2610  2610_fsm  2656  2657  2663  2667  2673  2679  2701  2702  2704  3455  3503  5002  pg_internal.init
HW-13/postgres-data/base/5/: pg_internal.init
HW-13/postgres-data/global/: 1260  1262  pg_control  pg_internal.init
HW-13/postgres-data/pg_stat/: pgstat.stat
HW-13/postgres-data/pg_xact/: 0000
HW-13/src/conf/: config.py
HW-13/src/entity/: models.py
HW-13/src/repository/: users.py
HW-13/src/routes/: auth.py  contacts.py  users.py
HW-13/src/schemas/: user.py
HW-13/src/services/: auth.py  email.py  roles.py
HW-13_part_2/: pyproject.toml
HW-14/: .coverage  main.py  postgres-data.rar  pyproject.toml
HW-14/docs/: conf.py
HW-14/tests/: test_unit_repository_contacts.py
HW-3/: main_potok.py  main_process.py
HW-4/: Dockerfile  main.py  pyproject.toml
HW-4/storage/: data.json
HW-5/: hw_5.py
HW-5/hw_5_chat/: log.txt  server.py
HW-6/: connect.py  create_table.sql  hw_6_insert.py  hw_6_select.py  ku-ku.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
HW-7/: config.ini  my_select.py  pyproject.toml  seed.py
HW-7/conf/: db.py  models.py
HW-8/: consumer.py  producer.py  pyproject.toml
HW-9/: authors.json  main.py  pyproject.toml  save_to_db.py
hw_10/: pyproject.toml
hw_10/hw_quotes/: .env
(+133 files in other folders)
