[tool.poetry]
name = "hw-11"
version = "0.1.0"
description = ""
authors = ["Ksushondrik <ksushondrik369@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
uvicorn = "^0.30.5"
pydantic = {extras = ["email"], version = "^2.8.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
