[tool.poetry]
name = "mod-6-2"
version = "0.1.0"
description = ""
authors = ["Ksushondrik <ksushondrik369@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
faker = "^25.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
