[tool.poetry]
name = "hw-9"
version = "0.1.0"
description = ""
authors = ["Ksushondrik <ksushondrik369@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
mongoengine = "^0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
